--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 
 dependencies {
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "com.kakao.sdk:v2-user:2.8.3"
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
