--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
 
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
     implementation 'com.nex3z:flow-layout:1.3.3'
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
